--- a/HYNewNest/Features(主代码)/MeComponent/CopartnerComponent/Controller/BYSuperCopartnerVC.xib
+++ b/HYNewNest/Features(主代码)/MeComponent/CopartnerComponent/Controller/BYSuperCopartnerVC.xib
@@ -4,7 +4,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -36,14 +35,14 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="375" height="1713"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" delaysContentTouches="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oee-Jb-axV">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="1713"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="编组 6" translatesAutoresizingMaskIntoConstraints="NO" id="tbm-Tt-Qr6">
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="topbg.40caa99a" translatesAutoresizingMaskIntoConstraints="NO" id="tbm-Tt-Qr6">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="258"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="tbm-Tt-Qr6" secondAttribute="height" multiplier="125:86" id="58V-Wv-WJA"/>
@@ -561,6 +560,16 @@
                                 <action selector="didTapRecomonBtn:" destination="-1" eventType="touchUpInside" id="Fr1-4m-BYr"/>
                             </connections>
                         </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QoN-jS-sNc">
+                            <rect key="frame" x="10" y="20" width="40" height="24"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="40" id="VMa-JV-4AK"/>
+                            </constraints>
+                            <state key="normal" image="l_back"/>
+                            <connections>
+                                <action selector="didTapBackBtn:" destination="-1" eventType="touchUpInside" id="njo-ae-bBO"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <constraints>
                         <constraint firstItem="fru-Qg-MVn" firstAttribute="centerX" secondItem="tbm-Tt-Qr6" secondAttribute="centerX" id="0kY-ZK-aZR"/>
@@ -568,6 +577,7 @@
                         <constraint firstItem="NQ3-Ei-By2" firstAttribute="top" secondItem="dzw-ok-mqd" secondAttribute="bottom" constant="50" id="1df-QS-Owl"/>
                         <constraint firstAttribute="trailing" secondItem="sFh-Al-0F9" secondAttribute="trailing" id="2QU-Dp-qnk"/>
                         <constraint firstItem="xXO-l9-M0x" firstAttribute="centerX" secondItem="Oee-Jb-axV" secondAttribute="centerX" id="4Sa-n1-v7u"/>
+                        <constraint firstItem="QoN-jS-sNc" firstAttribute="leading" secondItem="Oee-Jb-axV" secondAttribute="leading" constant="10" id="551-Yf-ZVI"/>
                         <constraint firstItem="dzw-ok-mqd" firstAttribute="centerX" secondItem="Oee-Jb-axV" secondAttribute="centerX" id="8PK-wq-gfO"/>
                         <constraint firstItem="hX9-Ik-1Bl" firstAttribute="centerX" secondItem="pb9-8O-K1N" secondAttribute="centerX" id="CKU-YQ-tvC"/>
                         <constraint firstItem="tSu-MC-uyH" firstAttribute="top" secondItem="vcX-ck-Bkb" secondAttribute="bottom" constant="18" id="CiW-kx-hLX"/>
@@ -593,6 +603,7 @@
                         <constraint firstItem="xXO-l9-M0x" firstAttribute="top" secondItem="tSu-MC-uyH" secondAttribute="bottom" constant="10" id="cWx-g6-z69"/>
                         <constraint firstAttribute="trailing" secondItem="tbm-Tt-Qr6" secondAttribute="trailing" id="dX4-j2-ncp"/>
                         <constraint firstAttribute="bottom" secondItem="6mB-YC-evT" secondAttribute="bottom" id="hcM-l5-gYR"/>
+                        <constraint firstItem="QoN-jS-sNc" firstAttribute="top" secondItem="Oee-Jb-axV" secondAttribute="top" constant="20" id="iGy-Xs-VxH"/>
                         <constraint firstItem="EIG-8e-gqA" firstAttribute="centerX" secondItem="NQ3-Ei-By2" secondAttribute="centerX" id="jZE-Qa-MBl"/>
                         <constraint firstItem="wRc-q4-UbF" firstAttribute="top" secondItem="EIG-8e-gqA" secondAttribute="bottom" constant="18" id="k1b-DG-fPs"/>
                         <constraint firstItem="LlO-BA-2Nd" firstAttribute="top" secondItem="sFh-Al-0F9" secondAttribute="bottom" constant="-30" id="nll-1S-hpD"/>
@@ -607,16 +618,15 @@
                     </constraints>
                 </scrollView>
             </subviews>
-            <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="Oee-Jb-axV" firstAttribute="trailing" secondItem="Q5M-cg-NOt" secondAttribute="trailing" id="8Yc-Hj-mK2"/>
+                <constraint firstItem="Oee-Jb-axV" firstAttribute="trailing" secondItem="i5M-Pr-FkT" secondAttribute="trailing" id="8Yc-Hj-mK2"/>
                 <constraint firstAttribute="bottom" secondItem="Oee-Jb-axV" secondAttribute="bottom" id="Jpo-i8-uHx"/>
                 <constraint firstItem="Oee-Jb-axV" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="e5P-je-qRc"/>
-                <constraint firstItem="Oee-Jb-axV" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="oji-rq-I3P"/>
+                <constraint firstItem="Oee-Jb-axV" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="oji-rq-I3P"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="131" y="439"/>
+            <point key="canvasLocation" x="-538" y="418"/>
         </view>
         <tapGestureRecognizer id="JQZ-AE-THM">
             <connections>
@@ -625,14 +635,15 @@
         </tapGestureRecognizer>
     </objects>
     <resources>
+        <image name="l_back" width="24" height="24"/>
         <image name="titleimg1" width="161" height="41"/>
         <image name="titleimg2" width="179" height="20"/>
         <image name="titleimg3" width="137" height="20"/>
+        <image name="topbg.40caa99a" width="250" height="172"/>
         <image name="矩形备份 3" width="341" height="44"/>
         <image name="竖分隔线" width="2" height="9"/>
         <image name="编组 14" width="51" height="40"/>
         <image name="编组 3" width="375" height="125"/>
-        <image name="编组 6" width="375" height="258"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
