--- a/HYNewNest/Features(主代码)/WalletComponent/RechargeComponent/View/HYRechargePayWayCell.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/RechargeComponent/View/HYRechargePayWayCell.xib
@@ -25,7 +25,7 @@
                             <constraint firstAttribute="height" constant="0.5" id="Ci1-Sj-I3r"/>
                         </constraints>
                     </view>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="xjk" translatesAutoresizingMaskIntoConstraints="NO" id="sWG-D0-sxA">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="xjk_s" translatesAutoresizingMaskIntoConstraints="NO" id="sWG-D0-sxA">
                         <rect key="frame" x="15" y="16" width="48" height="48"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -96,7 +96,7 @@
     </objects>
     <resources>
         <image name="unSelect" width="16" height="16"/>
-        <image name="xjk" width="28" height="37"/>
+        <image name="xjk_s" width="40" height="40"/>
         <systemColor name="systemGray4Color">
             <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
