--- a/HYNewNest/Features(主代码)/MeComponent/Controller/CNSecurityCenterVC.xib
+++ b/HYNewNest/Features(主代码)/MeComponent/Controller/CNSecurityCenterVC.xib
@@ -13,9 +13,9 @@
             <connections>
                 <outlet property="emailTF" destination="u9s-RI-sOg" id="QV3-3f-4Pq"/>
                 <outlet property="phoneTF" destination="7pT-wn-FmL" id="vK4-yw-dzl"/>
+                <outlet property="realNameTF" destination="M6R-25-YqA" id="2fw-qB-A94"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
-                <outlet property="weixinLabel" destination="SOZ-zx-SgN" id="xqX-5D-hIz"/>
-                <outlet property="weixinTF" destination="M6R-25-YqA" id="Tya-D4-AwC"/>
+                <outlet property="weixinTF" destination="xKZ-gV-yGh" id="Mg2-dm-sIu"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -24,7 +24,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LnJ-rU-3Y2">
-                    <rect key="frame" x="15" y="59" width="384" height="165"/>
+                    <rect key="frame" x="15" y="59" width="384" height="220"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9tO-2g-8HF" userLabel="SexView">
                             <rect key="frame" x="0.0" y="0.0" width="384" height="55"/>
@@ -85,8 +85,8 @@
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="go" translatesAutoresizingMaskIntoConstraints="NO" id="FzM-PO-mYj">
                                     <rect key="frame" x="361" y="21" width="8" height="13"/>
                                 </imageView>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="微信号" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SOZ-zx-SgN">
-                                    <rect key="frame" x="15" y="19" width="43" height="17"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="付款人姓名" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SOZ-zx-SgN">
+                                    <rect key="frame" x="15" y="19" width="71.5" height="17"/>
                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                     <color key="textColor" red="1" green="1" blue="1" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
                                     <nil key="highlightedColor"/>
@@ -98,7 +98,7 @@
                                         <constraint firstAttribute="height" constant="1" id="YEq-P9-4Ji"/>
                                     </constraints>
                                 </view>
-                                <textField opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请填写您的微信号" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="M6R-25-YqA" customClass="CNBaseTF">
+                                <textField opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请填写付款人姓名" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="M6R-25-YqA" customClass="CNBaseTF">
                                     <rect key="frame" x="226" y="18.5" width="120" height="18.5"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="120" id="zSt-6s-eJE"/>
@@ -110,7 +110,7 @@
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ILh-Ja-vaY">
                                     <rect key="frame" x="0.0" y="0.0" width="384" height="55"/>
                                     <connections>
-                                        <action selector="showBindView:" destination="-1" eventType="touchUpInside" id="1i7-yT-vOX"/>
+                                        <action selector="bindRealNameClicked:" destination="-1" eventType="touchUpInside" id="7T9-Ix-ft0"/>
                                     </connections>
                                 </button>
                             </subviews>
@@ -121,19 +121,72 @@
                                 <constraint firstAttribute="trailing" secondItem="ILh-Ja-vaY" secondAttribute="trailing" id="2HZ-4C-8n6"/>
                                 <constraint firstItem="SOZ-zx-SgN" firstAttribute="leading" secondItem="a0W-u7-jiw" secondAttribute="leading" constant="15" id="31r-MM-IMc"/>
                                 <constraint firstAttribute="bottom" secondItem="ILh-Ja-vaY" secondAttribute="bottom" id="8s1-wH-qcO"/>
-                                <constraint firstItem="ILh-Ja-vaY" firstAttribute="top" secondItem="a0W-u7-jiw" secondAttribute="top" id="98v-C8-c3J"/>
                                 <constraint firstItem="M6R-25-YqA" firstAttribute="centerY" secondItem="a0W-u7-jiw" secondAttribute="centerY" id="EC9-i7-5rf"/>
                                 <constraint firstAttribute="trailing" secondItem="FzM-PO-mYj" secondAttribute="trailing" constant="15" id="Fxi-Nc-jI9"/>
                                 <constraint firstItem="ILh-Ja-vaY" firstAttribute="leading" secondItem="a0W-u7-jiw" secondAttribute="leading" id="S7T-78-JBW"/>
                                 <constraint firstAttribute="trailing" secondItem="1ve-ZX-KOX" secondAttribute="trailing" id="XXX-rM-vfF"/>
                                 <constraint firstAttribute="bottom" secondItem="1ve-ZX-KOX" secondAttribute="bottom" id="h2S-HR-0ub"/>
                                 <constraint firstItem="1ve-ZX-KOX" firstAttribute="leading" secondItem="a0W-u7-jiw" secondAttribute="leading" id="mD9-EJ-qbe"/>
+                                <constraint firstItem="ILh-Ja-vaY" firstAttribute="top" secondItem="a0W-u7-jiw" secondAttribute="top" id="nk1-1S-kbd"/>
                                 <constraint firstAttribute="height" constant="55" id="ogx-pw-58v"/>
                                 <constraint firstItem="FzM-PO-mYj" firstAttribute="leading" secondItem="M6R-25-YqA" secondAttribute="trailing" constant="15" id="zr2-jW-dMX"/>
                             </constraints>
                         </view>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6hc-Oy-myq" userLabel="SexView">
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kO5-HJ-Ezr" userLabel="SexView">
                             <rect key="frame" x="0.0" y="110" width="384" height="55"/>
+                            <subviews>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="go" translatesAutoresizingMaskIntoConstraints="NO" id="m73-d8-vVH">
+                                    <rect key="frame" x="361" y="21" width="8" height="13"/>
+                                </imageView>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="微信号" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3BB-zT-OMD">
+                                    <rect key="frame" x="15" y="19" width="43" height="17"/>
+                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                    <color key="textColor" red="1" green="1" blue="1" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pVV-5q-mLa" customClass="CNLineView">
+                                    <rect key="frame" x="0.0" y="54" width="384" height="1"/>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="1" id="lIg-C5-xw1"/>
+                                    </constraints>
+                                </view>
+                                <textField opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请填写您的微信号" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xKZ-gV-yGh" customClass="CNBaseTF">
+                                    <rect key="frame" x="226" y="18.5" width="120" height="18.5"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="120" id="DNA-7K-iNx"/>
+                                    </constraints>
+                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </textField>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ix9-Tr-UzB">
+                                    <rect key="frame" x="0.0" y="0.0" width="384" height="55"/>
+                                    <connections>
+                                        <action selector="showBindView:" destination="-1" eventType="touchUpInside" id="xuu-jr-FJD"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="trailing" secondItem="ix9-Tr-UzB" secondAttribute="trailing" id="01t-t1-drZ"/>
+                                <constraint firstItem="3BB-zT-OMD" firstAttribute="leading" secondItem="kO5-HJ-Ezr" secondAttribute="leading" constant="15" id="3As-ay-ye3"/>
+                                <constraint firstAttribute="height" constant="55" id="57M-eh-kQ6"/>
+                                <constraint firstItem="pVV-5q-mLa" firstAttribute="leading" secondItem="kO5-HJ-Ezr" secondAttribute="leading" id="RZ4-dy-6Pg"/>
+                                <constraint firstItem="ix9-Tr-UzB" firstAttribute="top" secondItem="kO5-HJ-Ezr" secondAttribute="top" id="SSw-Py-YwL"/>
+                                <constraint firstItem="3BB-zT-OMD" firstAttribute="centerY" secondItem="kO5-HJ-Ezr" secondAttribute="centerY" id="VI0-Ib-882"/>
+                                <constraint firstAttribute="trailing" secondItem="pVV-5q-mLa" secondAttribute="trailing" id="X2J-5d-n2s"/>
+                                <constraint firstAttribute="bottom" secondItem="pVV-5q-mLa" secondAttribute="bottom" id="Zkw-lY-X7j"/>
+                                <constraint firstItem="ix9-Tr-UzB" firstAttribute="leading" secondItem="kO5-HJ-Ezr" secondAttribute="leading" id="gSo-vI-Lu4"/>
+                                <constraint firstItem="xKZ-gV-yGh" firstAttribute="centerY" secondItem="kO5-HJ-Ezr" secondAttribute="centerY" id="mBj-Go-WZf"/>
+                                <constraint firstAttribute="bottom" secondItem="ix9-Tr-UzB" secondAttribute="bottom" id="mia-eC-nhG"/>
+                                <constraint firstItem="m73-d8-vVH" firstAttribute="leading" secondItem="xKZ-gV-yGh" secondAttribute="trailing" constant="15" id="oJO-hW-iQL"/>
+                                <constraint firstItem="m73-d8-vVH" firstAttribute="centerY" secondItem="kO5-HJ-Ezr" secondAttribute="centerY" id="pQd-SC-WHu"/>
+                                <constraint firstAttribute="trailing" secondItem="m73-d8-vVH" secondAttribute="trailing" constant="15" id="vfb-Ey-q7A"/>
+                            </constraints>
+                        </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6hc-Oy-myq" userLabel="SexView">
+                            <rect key="frame" x="0.0" y="165" width="384" height="55"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="go" translatesAutoresizingMaskIntoConstraints="NO" id="2tI-If-vJN">
                                     <rect key="frame" x="361" y="21" width="8" height="13"/>
@@ -179,16 +232,18 @@
                     <color key="backgroundColor" red="0.16078431369999999" green="0.16078431369999999" blue="0.25490196079999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="bottom" secondItem="6hc-Oy-myq" secondAttribute="bottom" id="14x-cA-oOi"/>
-                        <constraint firstAttribute="height" constant="165" id="95o-kA-M06"/>
+                        <constraint firstItem="kO5-HJ-Ezr" firstAttribute="leading" secondItem="LnJ-rU-3Y2" secondAttribute="leading" id="4oI-Vz-3Pz"/>
+                        <constraint firstAttribute="trailing" secondItem="kO5-HJ-Ezr" secondAttribute="trailing" id="5lj-Ss-mb9"/>
+                        <constraint firstAttribute="height" constant="220" id="95o-kA-M06"/>
                         <constraint firstItem="9tO-2g-8HF" firstAttribute="top" secondItem="LnJ-rU-3Y2" secondAttribute="top" id="B7S-Ws-Eep"/>
                         <constraint firstAttribute="trailing" secondItem="9tO-2g-8HF" secondAttribute="trailing" id="Fta-CB-Hz4"/>
                         <constraint firstItem="a0W-u7-jiw" firstAttribute="trailing" secondItem="9tO-2g-8HF" secondAttribute="trailing" id="SEk-hO-gJ4"/>
-                        <constraint firstItem="6hc-Oy-myq" firstAttribute="top" secondItem="a0W-u7-jiw" secondAttribute="bottom" id="ime-42-FSo"/>
+                        <constraint firstItem="a0W-u7-jiw" firstAttribute="top" secondItem="9tO-2g-8HF" secondAttribute="bottom" id="nBE-Oy-a2L"/>
                         <constraint firstAttribute="trailing" secondItem="6hc-Oy-myq" secondAttribute="trailing" id="qlj-Ud-zXh"/>
+                        <constraint firstItem="kO5-HJ-Ezr" firstAttribute="top" secondItem="a0W-u7-jiw" secondAttribute="bottom" id="r9R-6G-xre"/>
                         <constraint firstItem="9tO-2g-8HF" firstAttribute="leading" secondItem="LnJ-rU-3Y2" secondAttribute="leading" id="tOD-Vj-iDx"/>
                         <constraint firstItem="a0W-u7-jiw" firstAttribute="leading" secondItem="9tO-2g-8HF" secondAttribute="leading" id="uMh-Zt-4Wa"/>
                         <constraint firstItem="6hc-Oy-myq" firstAttribute="leading" secondItem="LnJ-rU-3Y2" secondAttribute="leading" id="yaF-Qa-t1R"/>
-                        <constraint firstItem="a0W-u7-jiw" firstAttribute="centerY" secondItem="LnJ-rU-3Y2" secondAttribute="centerY" id="yaQ-Mc-L5y"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -198,7 +253,7 @@
                     </userDefinedRuntimeAttributes>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BAS-BH-Hn9">
-                    <rect key="frame" x="15" y="239" width="384" height="111"/>
+                    <rect key="frame" x="15" y="294" width="384" height="111"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bbF-S4-D7r" userLabel="BirthView">
                             <rect key="frame" x="0.0" y="0.0" width="384" height="55"/>
@@ -325,7 +380,7 @@
                 <constraint firstItem="LnJ-rU-3Y2" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="15" id="riR-sn-Pq8"/>
                 <constraint firstItem="BAS-BH-Hn9" firstAttribute="leading" secondItem="LnJ-rU-3Y2" secondAttribute="leading" id="x00-F0-f8C"/>
             </constraints>
-            <point key="canvasLocation" x="137.68115942028987" y="136.60714285714286"/>
+            <point key="canvasLocation" x="-59.420289855072468" y="89.732142857142847"/>
         </view>
     </objects>
     <resources>
