--- a/HYNewNest/Features(主代码)/MessageCenterComponent/View/CNMessageTCell.xib
+++ b/HYNewNest/Features(主代码)/MessageCenterComponent/View/CNMessageTCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -46,18 +46,30 @@
                         <rect key="frame" x="15" y="49" width="290" height="50"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="本月洗码" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xtm-Xm-Rih">
-                                <rect key="frame" x="15" y="15" width="260" height="20"/>
+                                <rect key="frame" x="48" y="15" width="227" height="20"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" red="0.82745098039215681" green="0.82745098039215681" blue="0.82745098039215681" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="新" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ug4-hL-Rqh">
+                                <rect key="frame" x="15" y="15" width="30" height="18"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="18" id="35A-bp-ECr"/>
+                                    <constraint firstAttribute="width" constant="30" id="5Yv-Nj-z2o"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="12"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="0.16078431369999999" green="0.16078431369999999" blue="0.25490196079999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="xtm-Xm-Rih" secondAttribute="trailing" constant="15" id="3He-La-mqg"/>
+                            <constraint firstItem="ug4-hL-Rqh" firstAttribute="top" secondItem="9L7-d4-aKq" secondAttribute="top" constant="15" id="6lI-CK-tlk"/>
                             <constraint firstAttribute="bottom" secondItem="xtm-Xm-Rih" secondAttribute="bottom" constant="15" id="7fA-XU-hM6"/>
+                            <constraint firstItem="ug4-hL-Rqh" firstAttribute="leading" secondItem="9L7-d4-aKq" secondAttribute="leading" constant="15" id="8s9-jS-vVD"/>
+                            <constraint firstItem="xtm-Xm-Rih" firstAttribute="leading" secondItem="ug4-hL-Rqh" secondAttribute="trailing" constant="3" id="Lyn-7k-19U"/>
                             <constraint firstItem="xtm-Xm-Rih" firstAttribute="top" secondItem="9L7-d4-aKq" secondAttribute="top" constant="15" id="fCi-Wv-WOL"/>
-                            <constraint firstItem="xtm-Xm-Rih" firstAttribute="leading" secondItem="9L7-d4-aKq" secondAttribute="leading" constant="15" id="tYA-ui-vs9"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -76,13 +88,15 @@
                     <constraint firstItem="Y2q-Tb-68X" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="hOU-pK-asD"/>
                 </constraints>
             </tableViewCellContentView>
-            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
                 <outlet property="contentLb" destination="xtm-Xm-Rih" id="Vtu-vT-oUA"/>
+                <outlet property="markLabel" destination="ug4-hL-Rqh" id="ZI6-1O-Skk"/>
+                <outlet property="markLabelConstraint" destination="5Yv-Nj-z2o" id="MTS-6g-QfK"/>
                 <outlet property="timeLb" destination="8p9-jv-E6H" id="Qo4-dX-5ag"/>
             </connections>
-            <point key="canvasLocation" x="167" y="38"/>
+            <point key="canvasLocation" x="166.66666666666669" y="37.834821428571423"/>
         </tableViewCell>
     </objects>
 </document>
